force-app/main/default/objects/Transcation__c/Transcation__c.object-meta.xml
<CustomObject>
    <label>Transcation</label>
    <nameField>
        <displayFormat>Transcation-{0000}</displayFormat>
        <label>Transcation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transcations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>