force-app/main/default/objects/Transcation__c/fields/API_Created_By__c.field-meta.xml
<CustomField>
    <fullName>API_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API_Created_By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transcations</relationshipName>
    <type>Lookup</type>
</CustomField>