force-app/main/default/objects/Transcation__c/fields/Is_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Down_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Down Payment</label>
    <type>Checkbox</type>
</CustomField>