force-app/main/default/objects/Transcation__c/fields/Link_Status__c.field-meta.xml
<CustomField>
    <fullName>Link_Status__c</fullName>
    <label>Link Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>