force-app/main/default/objects/Transcation__c/fields/Purchase_Orders__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Orders__c</fullName>
    <label>Purchase Orders</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Transcations (Purchase Orders)</relationshipLabel>
    <relationshipName>Transcations1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>