force-app/main/default/objects/Transcation__c/fields/Transcation_Id__c.field-meta.xml
<CustomField>
    <fullName>Transcation_Id__c</fullName>
    <label>Transcation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>